ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: hello.domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-service-svc
            port:
              number: 80
  - host: profile.domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: profile-service-svc
            port:
              number: 80
  - host: domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
